--- a/03-development/frontend/package.json
+++ b/03-development/frontend/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^19.2.4",
     "react-router-dom": "^7.13.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.15.0",
     "web-vitals": "^5.1.0"
   },
   "scripts": {
