--- a/03-development/package.json
+++ b/03-development/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "frontend",
-  "version": "0.1.0",
+  "name": "rccp-manhours",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.13.5",
-    "cra-template-pwa": "2.0.0",
-    "jwt-decode": "^4.0.0",
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "react-router-dom": "^7.13.0",
-    "react-scripts": "5.0.1",
-    "recharts": "^2.15.0",
-    "web-vitals": "^5.1.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.20.0",
+    "recharts": "^2.10.0",
+    "lucide-react": "^0.294.0"
+  },
+  "devDependencies": {
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -21,8 +20,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
@@ -36,6 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "proxy": "http://localhost:3000"
+  }
 }
